--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,15 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# Build for .NET Core project
 
 trigger:
-- master
+  batch: true
+  branches:
+    include:
+    - '*'
+
+pr:
+  branches:
+    include:
+    - '*'
 
 pool:
   vmImage: 'ubuntu-latest'
