--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
 
       - task: DotNetCoreCLI@2
         displayName: 'dotnet restore only from NuGet feed'
-        condition: and(succeeded(), (variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
         inputs:
           command: 'restore'
           projects: '**/*.csproj'
