--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
           version: '3.x'
 
       - task: DotNetCoreCLI@2
-        displayName: 'dotnet restore from Nuget and Azure Artifacts feeds'
+        displayName: 'dotnet restore from both Nuget and Azure Artifacts feeds'
         condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
         inputs:
           command: 'restore'
