--- a/test/GodelTech.Data.EntityFrameworkCore.Tests/GodelTech.Data.EntityFrameworkCore.Tests.csproj
+++ b/test/GodelTech.Data.EntityFrameworkCore.Tests/GodelTech.Data.EntityFrameworkCore.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+    <!-- SonarQube needs this -->
+    <ProjectGuid>{00000000-0000-0000-0000-000000000002}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
