--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -19,8 +19,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GodelTech.Data" Version="1.0.0-rc.3-ci-20200403.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="GodelTech.Data" Version="1.0.0-rc.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
