--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,15 +2,15 @@ trigger:
   batch: true
   branches:
     include:
-    - '*'
+    - "*"
 
 pr:
   branches:
     include:
-    - '*'
+    - "*"
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: "ubuntu-latest"
 
 resources:
   repositories:
@@ -22,8 +22,8 @@ resources:
 stages:
 - template: templates/nuget.yml@GodelTech
   parameters:
-    buildConfiguration: 'Release'
-    internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24'
-    artifactPackDirectory: 'packages'
-    sonarCloudOrganizationName: 'godeltech'
-    sourceBranch: 'master'
+    buildConfiguration: "Release"
+    internalFeed: "19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24"
+    artifactPackDirectory: "packages"
+    sonarCloudOrganizationName: "godeltech"
+    sourceBranch: "master"
