--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,29 +2,27 @@ trigger:
   batch: true
   branches:
     include:
-    - "*"
+    - '*'
 
 pr:
   branches:
     include:
-    - "*"
-
-pool:
-  vmImage: "ubuntu-latest"
+    - '*'
 
 resources:
   repositories:
     - repository: GodelTech
       type: github
-      endpoint: "godeltech"
-      name: "GodelTech/Yaml.Common"
-      ref: "refs/heads/master"
+      endpoint: 'godeltech'
+      name: 'GodelTech/Yaml.Common'
+      ref: 'refs/heads/master'
 
 stages:
 - template: templates/nuget.yml@GodelTech
   parameters:
-    buildConfiguration: "Release"
-    internalFeed: "19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24"
-    artifactPackDirectory: "packages"
-    sonarCloudOrganizationName: "godeltech"
-    sourceBranch: "master"
+    artifactPackDirectory: 'packages'
+    buildConfiguration: 'Release'
+    internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24'
+    sonarCloudOrganizationName: 'godeltech'
+    sourceBranch: 'master'
+    vmImage: 'ubuntu-latest'
