--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ resources:
       ref: 'refs/heads/master'
 
 extends:
-  template: '.NET Core/nuget.yml@GodelTech'
+  template: '.NetCore/nuget.yml@GodelTech'
   parameters:
     artifactPackDirectory: 'packages'
     buildConfiguration: 'Release'
