--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>GodelTech.Data.EntityFrameworkCore</PackageId>
-    <VersionPrefix>1.0.0-rc.1</VersionPrefix>
+    <VersionPrefix>1.0.0-rc.2</VersionPrefix>
     <Authors>v.rodchenko</Authors>
     <Company>Godel Technologies</Company>
     <Description>Library to access database with Unit of Work, Repository and Entity classes for Entity Framework Core.</Description>
@@ -14,6 +14,15 @@
     <RepositoryUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore</RepositoryUrl>
     <PackageTags>Entity Framework Core Data UnitOfWork Repository Entity</PackageTags>
 
+    <!-- XML documentation -->
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+    <!-- Source Link needs this -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
     <!-- SonarQube needs this -->
     <ProjectGuid>{00000000-0000-0000-0000-000000000001}</ProjectGuid>
   </PropertyGroup>
@@ -21,6 +30,9 @@
   <ItemGroup>
     <PackageReference Include="GodelTech.Data" Version="1.0.0-rc.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+
+    <!-- Source Link needs this -->
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
 </Project>
