--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -30,11 +30,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="GodelTech.Data" Version="3.1.2" />
+		<PackageReference Include="GodelTech.Data" Version="3.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
 
 		<!-- Source Link needs this -->
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Update="Repository.*.cs">
+			<DependentUpon>Repository.cs</DependentUpon>
+		</Compile>
 	</ItemGroup>
 
 </Project>
