--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
 		<PackageId>GodelTech.Data.EntityFrameworkCore</PackageId>
 		<VersionPrefix>3.0.1</VersionPrefix>
 		<Authors>v.rodchenko</Authors>
@@ -29,9 +29,16 @@
 		<ProjectGuid>{00000000-0000-0000-0000-000000000010}</ProjectGuid>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="GodelTech.Data" Version="6.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
 
 		<!-- Source Link needs this -->
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
