--- a/test/GodelTech.Data.EntityFrameworkCore.IntegrationTests/GodelTech.Data.EntityFrameworkCore.IntegrationTests.csproj
+++ b/test/GodelTech.Data.EntityFrameworkCore.IntegrationTests/GodelTech.Data.EntityFrameworkCore.IntegrationTests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
 
 		<IsPackable>false</IsPackable>
 
@@ -11,14 +11,22 @@
 		<ProjectGuid>{00000000-0000-0000-0000-000000000021}</ProjectGuid>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.15" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
 		<PackageReference Include="coverlet.collector" Version="3.1.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
