--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -20,7 +20,10 @@ resources:
 extends:
   template: '.NET/NuGet.yml@GodelTech'
   parameters:
-    dotNetSDKVersions: [ '3.1.x', '6.0.x' ]
     sonarCloudOrganizationName: 'godeltech'
     artifactPackDirectory: 'packages'
+    dotNetSDKVersions: [ '3.1.x', '6.0.x' ]
     internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24'
+    mutationTestingProjects:
+    - displayName: 'GodelTech.Data.EntityFrameworkCore'
+      folderPath: '/src/GodelTech.Data.EntityFrameworkCore'
