--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -1,53 +1,59 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
-		<PackageId>GodelTech.Data.EntityFrameworkCore</PackageId>
-		<VersionPrefix>3.0.1</VersionPrefix>
-		<Authors>v.rodchenko</Authors>
-		<Company>Godel Technologies</Company>
-		<Description>Library to access database with Unit of Work, Repository and Entity classes for Entity Framework Core.</Description>
-		<Copyright>Godel Technologies 2020</Copyright>
-		<PackageLicenseUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore/blob/master/LICENSE</PackageLicenseUrl>
-		<PackageProjectUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore/wiki</PackageProjectUrl>
-		<PackageIconUrl>https://www.gravatar.com/avatar/839234621070de51e7b9cabd5ceee8fe?s=64</PackageIconUrl>
-		<RepositoryUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore</RepositoryUrl>
-		<PackageTags>Entity Framework Core Data UnitOfWork Repository Entity</PackageTags>
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+    <PackageId>GodelTech.Data.EntityFrameworkCore</PackageId>
+    <VersionPrefix>3.0.1</VersionPrefix>
+    <Authors>v.rodchenko</Authors>
+    <Company>Godel Technologies</Company>
+    <Description>Library to access database with Unit of Work, Repository and Entity classes for Entity Framework Core.</Description>
+    <Copyright>Godel Technologies 2020</Copyright>
+    <PackageLicenseUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore/wiki</PackageProjectUrl>
+    <PackageIconUrl>https://www.gravatar.com/avatar/839234621070de51e7b9cabd5ceee8fe?s=64</PackageIconUrl>
+    <RepositoryUrl>https://github.com/GodelTech/GodelTech.Data.EntityFrameworkCore</RepositoryUrl>
+    <PackageTags>Entity Framework Core Data UnitOfWork Repository Entity</PackageTags>
 
-		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
 
-		<!-- XML documentation -->
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!-- XML documentation -->
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-		<!-- Source Link needs this -->
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
-		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <!-- Source Link needs this -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
-		<!-- SonarQube needs this -->
-		<ProjectGuid>{00000000-0000-0000-0000-000000000010}</ProjectGuid>
-	</PropertyGroup>
+    <!-- SonarQube needs this -->
+    <ProjectGuid>{00000000-0000-0000-0000-000000000010}</ProjectGuid>
+  </PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
-	</ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+  </ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
-	</ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="GodelTech.Data" Version="6.2.0" />
+  <ItemGroup>
+    <PackageReference Include="GodelTech.Data" Version="6.2.0" />
 
-		<!-- Source Link needs this -->
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-	</ItemGroup>
+    <!-- Source Link needs this -->
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<Compile Update="Repository.*.cs">
-			<DependentUpon>Repository.cs</DependentUpon>
-		</Compile>
-	</ItemGroup>
+  <ItemGroup>
+    <Compile Update="Repository.*.cs">
+      <DependentUpon>Repository.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="$(ProjectDir)\Simple\SimpleRepository.*.cs">
+      <DependentUpon>$(ProjectDir)\Simple\SimpleRepository.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
 
 </Project>
