--- a/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
+++ b/src/GodelTech.Data.EntityFrameworkCore/GodelTech.Data.EntityFrameworkCore.csproj
@@ -56,4 +56,10 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="$(ProjectDir)\Simple\Extensions\SimpleRepositoryExtensions.*.cs">
+      <DependentUpon>$(ProjectDir)\Simple\Extensions\SimpleRepositoryExtensions.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
