--- a/test/GodelTech.Data.EntityFrameworkCore.Tests/GodelTech.Data.EntityFrameworkCore.Tests.csproj
+++ b/test/GodelTech.Data.EntityFrameworkCore.Tests/GodelTech.Data.EntityFrameworkCore.Tests.csproj
@@ -47,4 +47,10 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Simple\Extensions\SimpleRepositoryExtensionsAsyncTests.*.cs">
+      <DependentUpon>SimpleRepositoryExtensionsAsyncTests.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
