--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -22,8 +22,9 @@ extends:
   parameters:
     sonarCloudOrganizationName: 'godeltech'
     artifactPackDirectory: 'packages'
-    dotNetSDKVersions: [ '6.0.x', '7.0.x' ]
-    internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24'
+    internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24',
+    dotNetSDKVersions: [ '6.0.x', '7.0.x' ],
+    enableNuGetValidationOutdatedPackages: false
     mutationTestingProjects:
     - displayName: 'GodelTech.Data.EntityFrameworkCore'
       folderPath: '/src/GodelTech.Data.EntityFrameworkCore'
