--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -18,13 +18,9 @@ resources:
       ref: 'refs/tags/latest'
 
 extends:
-  template: '.NET/NuGet.yml@GodelTech'
+  template: '.azuredevops/.NET/NuGet.yml@GodelTech'
   parameters:
-    sonarCloudOrganizationName: 'godeltech'
-    artifactPackDirectory: 'packages'
-    internalFeed: '19324bbd-9baf-4407-b86d-3e7f0d145399/1574777e-9941-4b90-baa9-d9938266ac24'
-    dotNetSDKVersions: [ '6.0.x', '7.0.x' ]
-    enableNuGetValidationOutdatedPackages: false
+    dotNetSDKVersions: [ '6.0.x', '7.0.x', '8.0.x' ]
     mutationTestingProjects:
     - displayName: 'GodelTech.Data.EntityFrameworkCore'
       folderPath: '/src/GodelTech.Data.EntityFrameworkCore'
